--- a/p2p_rust/Cargo.toml
+++ b/p2p_rust/Cargo.toml
@@ -10,3 +10,5 @@ futures = "0.3.31"
 libp2p-noise = "0.46.1"
 libp2p-tcp = "0.44.0"
 libp2p-yamux = "0.47.0"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
